--- a/pages/tableData/datapages/sjtj/gcbb/gcbb.wxml
+++ b/pages/tableData/datapages/sjtj/gcbb/gcbb.wxml
@@ -1,95 +1,118 @@
-<view class="page project-list-info" data-weui-theme="{{theme}}">
-	<view class="weui-form-preview__hd">
-		<view wx:if="{{categoryType == 1}}">
-			<view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.projectName != ''}}">项目名称：{{map.projectName}}</view>
-			</view>
-			<view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.coverArea != ''}}">占地面积：{{map.coverArea}} </view>
-			</view>
-			<view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.totalArea != ''}}">总建筑面积：{{map.totalArea}}</view>
-			</view>
-			<view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.buildNum != ''}}">楼栋数：{{map.buildNum}}</view>
-			</view>
-			<view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.houseNum != ''}}">住宅套数：{{map.houseNum}}</view>
-			</view>
-      <view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.storeNum != ''}}">店面间数：{{map.storeNum}}</view>
-			</view>
-      <view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.businessArea != ''}}">商业面积：{{map.businessArea}}</view>
-			</view>
-      <view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.houseArea != ''}}">住宅面积：{{map.houseArea}}</view>
-			</view>
-			<!-- <view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.status != ''}}">施工单位：{{map.status}}</view>
-			</view> -->
-		</view>
+<!--房建类start-->
+<block wx:if="{{categoryType == 1}}">
+  <!-- 项目前期工作 -->
+  <view class="table">
+    <view class="tr">
+      <view class="td bg-g">项目名称</view>
+      <view class="td">{{map.projectName}}</view>
+    </view>
+    <view class="tr">
+      <view class="td bg-g">占地面积</view>
+      <view class="td">{{map.coverArea}}</view>
+    </view>
+    <view class="tr">
+      <view class="td bg-g">总建筑面积</view>
+      <view class="td">{{map.totalArea}}</view>
+    </view>
+    <view class="tr">
+      <view class="td bg-g">楼栋数</view>
+      <view class="td">{{map.buildNum}}</view>
+    </view>
+    <view class="tr">
+      <view class="td bg-g">住宅套数</view>
+      <view class="td">{{map.houseNum}}</view>
+    </view>
+    <view class="tr">
+      <view class="td bg-g">店面间数</view>
+      <view class="td">{{map.storeNum}}</view>
+    </view>
+    <view class="tr">
+      <view class="td bg-g">商业面积</view>
+      <view class="td">{{map.businessArea}}</view>
+    </view>
+		 <view class="tr">
+      <view class="td bg-g">住宅面积</view>
+      <view class="td">{{map.houseArea}}</view>
+    </view>
+  </view>
+</block>
+<!--房建类stop-->
 
+<!--园林类start-->
+<block wx:if="{{categoryType == 2}}">
+  <!-- 项目前期工作 -->
+  <view class="table">
+    <view class="tr">
+      <view class="td bg-g">项目名称</view>
+      <view class="td">{{map.projectName}}</view>
+    </view>
+    <view class="tr">
+      <view class="td bg-g">占地面积</view>
+      <view class="td">{{map.coverArea}}</view>
+    </view>
+    <view class="tr">
+      <view class="td bg-g">总建筑面积</view>
+      <view class="td">{{map.totalArea}}</view>
+    </view>
+    <view class="tr">
+      <view class="td bg-g">园路面积</view>
+      <view class="td">{{map.pathArea}}</view>
+    </view>
+    <view class="tr">
+      <view class="td bg-g">铺装面积</view>
+      <view class="td">{{map.paveArea}}</view>
+    </view>
+    <view class="tr">
+      <view class="td bg-g">景观桥(座)</view>
+      <view class="td">{{map.landscapeBridge}}</view>
+    </view>
+    <view class="tr">
+      <view class="td bg-g">乔木数(颗)</view>
+      <view class="td">{{map.treeNum}}</view>
+    </view>
+		 <view class="tr">
+      <view class="td bg-g">亮化数(盏)</view>
+      <view class="td">{{map.brightenNum}}</view>
+    </view>
+  </view>
+</block>
+<!--园林类stop-->
 
-		<view wx:if="{{categoryType == 2}}">
-			<view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.projectName != ''}}">项目名称：{{map.projectName}}</view>
-			</view>
-			<view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.coverArea != ''}}">占地面积：{{map.coverArea}} </view>
-			</view>
-			<view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.totalArea != ''}}">总建筑面积：{{map.totalArea}}</view>
-			</view>
-			<view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.pathArea != ''}}">园路面积：{{map.pathArea}}</view>
-			</view>
-			<view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.paveArea != ''}}">铺装面积：{{map.paveArea}}</view>
-			</view>
-      	<view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.landscapeBridge != ''}}">景观桥(座)：{{map.landscapeBridge}}</view>
-			</view>
-			<view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.treeNum != ''}}">乔木数(颗)：{{map.treeNum}}</view>
-			</view>
-      	<view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.brightenNum != ''}}">亮化数(盏)：{{map.brightenNum}}</view>
-			</view>
-			
-			<!-- <view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.status != ''}}">施工单位：{{map.status}}</view>
-			</view> -->
-		</view>
-
-		<view wx:if="{{categoryType == 3}}">
-			<view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.projectName != ''}}">项目名称：{{map.projectName}}</view>
-			</view>
-			<view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.coverArea != ''}}">占地面积：{{map.coverArea}} </view>
-			</view>
-			<view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.totalArea != ''}}">总建筑面积：{{map.totalArea}}</view>
-			</view>
-			<view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.roadLength != ''}}">道路长：{{map.roadLength}}</view>
-			</view>
-			<view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.roadWidth != ''}}">道路宽：{{map.roadWidth}}</view>
-			</view>
-      	<view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.carriagewayWidth != ''}}">行车道宽：{{map.carriagewayWidth}}</view>
-			</view>
-			<view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.sidewalkWidth != ''}}">人行道宽：{{map.sidewalkWidth}}</view>
-			</view>
-			<view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.pondWidth != ''}}">花池宽：{{map.pondWidth}}</view>
-			</view>
-			<!-- <view class="weui-form-preview__item">
-				<view class="application-name" wx:if="{{map.status != ''}}">施工单位：{{map.status}}</view>
-			</view> -->
-		</view>
-	</view>
-</view>
+<!--市政类start-->
+<block wx:if="{{categoryType == 3}}">
+  <view class="table">
+    <view class="tr">
+      <view class="td bg-g">项目名称</view>
+      <view class="td">{{map.projectName}}</view>
+    </view>
+    <view class="tr">
+      <view class="td bg-g">占地面积</view>
+      <view class="td">{{map.coverArea}}</view>
+    </view>
+    <view class="tr">
+      <view class="td bg-g">总建筑面积</view>
+      <view class="td">{{map.totalArea}}</view>
+    </view>
+    <view class="tr">
+      <view class="td bg-g">道路长</view>
+      <view class="td">{{map.roadLength}}</view>
+    </view>
+    <view class="tr">
+      <view class="td bg-g">道路宽</view>
+      <view class="td">{{map.roadWidth}}</view>
+    </view>
+		<view class="tr">
+      <view class="td bg-g">行车道宽</view>
+      <view class="td">{{map.carriagewayWidth}}</view>
+    </view>
+    <view class="tr">
+      <view class="td bg-g">人行道宽</view>
+      <view class="td">{{map.sidewalkWidth}}</view>
+    </view>
+		 <view class="tr">
+      <view class="td bg-g">花池宽</view>
+      <view class="td">{{map.pondWidth}}</view>
+    </view>
+  </view>
+</block>
+<!--市政类stop-->
