--- a/pages/control/control.wxml
+++ b/pages/control/control.wxml
@@ -1,2 +1,65 @@
-<!--pages/control/control.wxml-->
-<text>pages/control/control.wxml6666</text>
+<!--pages/tableData/tableData.wxml-->
+
+<view class="page" data-weui-theme="{{theme}}">
+	<view class="weui-grids">
+
+		<a class="weui-grid" bindtap="toPlan">
+			<view class="weui-grid__icon">
+				<image src="/images/ndjh.png" alt></image>
+			</view>
+			<view class="weui-grid__label">填写进度信息</view>
+		</a>
+
+		<a class="weui-grid" bindtap="toDcdb">
+			<view class="weui-grid__icon">
+				<image src="/images/ydxx.png" alt></image>
+			</view>
+			<view class="weui-grid__label">提交安全检查</view>
+		</a>
+
+		<a class="weui-grid" bindtap="toZjjk">
+			<view class="weui-grid__icon">
+				<image src="/images/zjjk.png" alt></image>
+			</view>
+			<view class="weui-grid__label">提交质量检查</view>
+		</a>
+
+		<a class="weui-grid" bindtap="toDcdb">
+			<view class="weui-grid__icon">
+				<image src="/images/aqjc.png" alt></image>
+			</view>
+			<view class="weui-grid__label">提交督办事项</view>
+		</a>
+
+		<a class="weui-grid" bindtap="toDcdb">
+			<view class="weui-grid__icon">
+				<image src="/images/zljc.png" alt></image>
+			</view>
+			<view class="weui-grid__label">提交签证审批</view>
+		</a>
+
+		<a class="weui-grid" bindtap="toSjtj">
+			<view class="weui-grid__icon">
+				<image src="/images/sjtj.png" alt></image>
+			</view>
+			<view class="weui-grid__label">提交合同管理</view>
+		</a>
+
+	</view>
+
+	<view class="weui-grids">
+		<a class="weui-grid" bindtap="toDb">
+			<view class="weui-grid__icon">
+				<image src="/images/dbsx.png" alt></image>
+			</view>
+			<view class="weui-grid__label">提交图纸文件</view>
+		</a>
+
+		<a class="weui-grid" bindtap="toFinish">
+			<view class="weui-grid__icon">
+				<image src="/images/qzsp.png" alt></image>
+			</view>
+			<view class="weui-grid__label">提交图片图像</view>
+		</a>
+	</view>
+</view>
