--- a/pages/project/project.wxml
+++ b/pages/project/project.wxml
@@ -21,20 +21,11 @@
 				</view>
 			</picker>
 		</view>
-
 	</view>
-
-	<view  wx:if="{{projectInfoShow}}">
+	<view wx:if="{{projectInfoShow}}">
 		<button class="projectBack" bindtap="showProjectList">返回</button>
 	</view>
 </view>
-
-
-<!-- 
-<navigator wx:for="{{projectList}}" wx:key="index" url="../project/projectInfo/projectInfo?id={{item.id}}" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-	<view class="weui-cell__bd">{{item.projectName}}</view>
-	<view class="weui-cell__ft weui-cell__ft_in-access">{{item.explain}}</view>
-</navigator> -->
 
 <view class="page project-list-info" data-weui-theme="{{theme}}">
 
@@ -43,9 +34,8 @@
 
 		<view class="weui-cells__title">项目名称</view>
 		<view class="weui-cells weui-cells_after-title">
-			
-			<view data-text="{{item.projectName}}" data-id="{{item.id}}" bindtap="showProjectInfo" class="weui-cell weui-cell_example " 
-			wx:for="{{projectList}}" wx:key="index" hover-class="weui-cell_active">
+
+			<view data-text="{{item.projectName}}" data-id="{{item.id}}" bindtap="showProjectInfo" class="weui-cell weui-cell_example " wx:for="{{projectList}}" wx:key="index" hover-class="weui-cell_active">
 				<view class="weui-cell__bd">{{item.projectName}}</view>
 				<!-- <view class="weui-cell__ft">{{item.buildType}}</view> -->
 			</view>
@@ -56,11 +46,11 @@
 	<!-- 项目详情页 -->
 	<view class="page__bd" wx:if="{{projectInfoShow}}">
 		<view style="text-align: center">
-			<text>{{projectName}}</text> 
+			<text>{{projectName}}</text>
 		</view>
 
 		<view id="projectImage">
-			<block wx:if="{{projectInfo.effectPicture != ''}}" >
+			<block wx:if="{{projectInfo.effectPicture != ''}}">
 				<image bindtap="toTableData" src="{{imagePath}}" style="width: 100%"></image>
 			</block>
 			<block wx:if="{{projectInfo.effectPicture == ''}}">
@@ -69,7 +59,6 @@
 		</view>
 
 		<view class="page">
-
 			<view class="page__bd page__bd_spacing">
 				<view class="weui-flex">
 					<view class="weui-flex__item">
@@ -91,22 +80,20 @@
 						<view wx:if="{{projectInfo.categoryId != ''}}">
 							项目类别id：{{projectInfo.categoryId}}
 						</view>
-
-						<!-- <view wx:if="{{projectInfo.effectPicture != ''}}">
-							效果图：{{projectInfo.effectPicture}}
-						</view> -->
-
 						<view wx:if="{{projectInfo.biddingType != ''}}">
-							招标方式,0.公开招标 1.直接委托：{{projectInfo.biddingType}}
+							招标方式：
+							<block wx:if="{{projectInfo.biddingType == 0}}">公开招标</block>
+							<block wx:if="{{projectInfo.biddingType == 1}}">直接委托</block>
 						</view>
 						<view wx:if="{{projectInfo.categoryType != ''}}">
-							项目类型：1.房建类 2.园林类 3.市政类：{{projectInfo.categoryType}}
+							项目类型：
+							<block wx:if="{{projectInfo.categoryType == 1}}">房建类</block>
+							<block wx:if="{{projectInfo.categoryType == 2}}">园林类</block>
+							<block wx:if="{{projectInfo.categoryType == 3}}">市政类</block>
 						</view>
 						<view wx:if="{{projectInfo.whichTime != ''}}">
 							填写时间：{{projectInfo.whichTime}}
 						</view>
-						
-
 						<view wx:if="{{projectInfo.projectName != ''}}">
 							项目名称：{{projectInfo.projectName}}
 						</view>
@@ -126,19 +113,23 @@
 							建设年限：{{projectInfo.buildYear}}
 						</view>
 						<view wx:if="{{projectInfo.buildType != ''}}">
-							建设类型 ：0.新建 1.续建：{{projectInfo.buildType}}
+							建设类型：
+							<block wx:if="{{projectInfo.buildType == 0}}">新建</block>
+							<block wx:if="{{projectInfo.buildType == 1}}">续建</block>
 						</view>
 						<view wx:if="{{projectInfo.isExpropriation != ''}}">
-							是否完成征地拆迁：0.否 1.是：{{projectInfo.isExpropriation}}
+							是否完成征地拆迁：
+							<block wx:if="{{projectInfo.isExpropriation == 0}}">否</block>
+							<block wx:if="{{projectInfo.isExpropriation == 1}}">是</block>
 						</view>
 						<view wx:if="{{projectInfo.isDispatch != ''}}">
-							是否列入市级调度：0.否 1.是：{{projectInfo.isDispatch}}
+							是否列入市级调度：
+							<block wx:if="{{projectInfo.isDispatch == 0}}">否</block>
+							<block wx:if="{{projectInfo.isDispatch == 1}}">是</block>
 						</view>
 						<view wx:if="{{projectInfo.leaderName != ''}}">
 							挂点领导：{{projectInfo.leaderName}}
 						</view>
-
-
 						<view wx:if="{{projectInfo.responsibleUnits != ''}}">
 							责任单位：{{projectInfo.responsibleUnits}}
 						</view>
@@ -169,8 +160,6 @@
 						<view wx:if="{{projectInfo.supervisionPhone != ''}}">
 							监理-联系电话：{{projectInfo.supervisionPhone}}
 						</view>
-
-					
 						<view wx:if="{{projectInfo.designCompanyName != ''}}">
 							设计-公司名称：{{projectInfo.designCompanyName}}
 						</view>
@@ -199,15 +188,20 @@
 							进度id：{{projectInfo.scheduleId}}
 						</view>
 						<view wx:if="{{projectInfo.isPlan != ''}}">
-							是否填写年度计划信息：0.否 1.是：{{projectInfo.isPlan}}
+							是否填写年度计划信息：
+							<block wx:if="{{projectInfo.isPlan == 0}}">否</block>
+							<block wx:if="{{projectInfo.isPlan == 1}}">是</block>
 						</view>
 						<view wx:if="{{projectInfo.isMonomer != ''}}">
-							是否填写单体情况：0.否 1.是：{{projectInfo.isMonomer}}
+							是否填写单体情况：
+							<block wx:if="{{projectInfo.isMonomer == 0}}">否</block>
+							<block wx:if="{{projectInfo.isMonomer == 1}}">是</block>
 						</view>
 						<view wx:if="{{projectInfo.isValid != ''}}">
-							是否有效：0.无效 1.有效：{{projectInfo.isValid}}
+							是否有效：
+							<block wx:if="{{projectInfo.isValid == 0}}">无效</block>
+							<block wx:if="{{projectInfo.isValid == 1}}">有效</block>
 						</view>
-
 					</view>
 				</view>
 			</view>
