--- a/pages/leaderboard/leaderboard.wxss
+++ b/pages/leaderboard/leaderboard.wxss
@@ -98,6 +98,17 @@ page {
   color: #666;
   border-bottom: 1rpx solid #e5e5e5;
 }
+.empty-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 28rpx;
+  width: 24.96vw;
+  height: 8.2vh;
+  /* font-weight: bolder; */
+  color: #666;
+  border-bottom: 1rpx solid #e5e5e5;
+}
 
 .price-box {
   height: 8.2vh;
