--- a/pages/control/control.wxml
+++ b/pages/control/control.wxml
@@ -1,63 +1,52 @@
-<!--pages/tableData/tableData.wxml-->
-
 <view class="page" data-weui-theme="{{theme}}">
 	<view class="weui-grids">
-
-		<a class="weui-grid" bindtap="toPlan">
+		<a class="weui-grid" bindtap="toJdxx">
 			<view class="weui-grid__icon">
-				<image src="/images/ndjh.png" alt></image>
+				<image src="/images/txjdxx.png" alt></image>
 			</view>
 			<view class="weui-grid__label">填写进度信息</view>
 		</a>
-
-		<a class="weui-grid" bindtap="toDcdb">
-			<view class="weui-grid__icon">
-				<image src="/images/ydxx.png" alt></image>
-			</view>
-			<view class="weui-grid__label">提交安全检查</view>
-		</a>
-
-		<a class="weui-grid" bindtap="toZjjk">
-			<view class="weui-grid__icon">
-				<image src="/images/zjjk.png" alt></image>
-			</view>
-			<view class="weui-grid__label">提交质量检查</view>
-		</a>
-
-		<a class="weui-grid" bindtap="toDcdb">
+		<a class="weui-grid" bindtap="toAqjc">
 			<view class="weui-grid__icon">
 				<image src="/images/aqjc.png" alt></image>
 			</view>
+			<view class="weui-grid__label">提交安全检查</view>
+		</a>
+		<a class="weui-grid" bindtap="toZljc">
+			<view class="weui-grid__icon">
+				<image src="/images/tjzljc.png" alt></image>
+			</view>
+			<view class="weui-grid__label">提交质量检查</view>
+		</a>
+		<a class="weui-grid" bindtap="toDbsx">
+			<view class="weui-grid__icon">
+				<image src="/images/tjdbsx.png" alt></image>
+			</view>
 			<view class="weui-grid__label">提交督办事项</view>
 		</a>
-
-		<a class="weui-grid" bindtap="toDcdb">
+		<a class="weui-grid" bindtap="toQzsp">
 			<view class="weui-grid__icon">
-				<image src="/images/zljc.png" alt></image>
+				<image src="/images/tjqzsp.png" alt></image>
 			</view>
 			<view class="weui-grid__label">提交签证审批</view>
 		</a>
-
-		<a class="weui-grid" bindtap="toSjtj">
+		<a class="weui-grid" bindtap="toHtgl">
 			<view class="weui-grid__icon">
-				<image src="/images/sjtj.png" alt></image>
+				<image src="/images/tjhtgl.png" alt></image>
 			</view>
 			<view class="weui-grid__label">提交合同管理</view>
 		</a>
-
 	</view>
-
 	<view class="weui-grids">
-		<a class="weui-grid" bindtap="toDb">
+		<a class="weui-grid" bindtap="toTzwj">
 			<view class="weui-grid__icon">
-				<image src="/images/dbsx.png" alt></image>
+				<image src="/images/tjtzwj.png" alt></image>
 			</view>
 			<view class="weui-grid__label">提交图纸文件</view>
 		</a>
-
-		<a class="weui-grid" bindtap="toFinish">
+		<a class="weui-grid" bindtap="toTptx">
 			<view class="weui-grid__icon">
-				<image src="/images/qzsp.png" alt></image>
+				<image src="/images/tjtptx.png" alt></image>
 			</view>
 			<view class="weui-grid__label">提交图片图像</view>
 		</a>
