--- a/pages/leaderboard/leaderboard.wxml
+++ b/pages/leaderboard/leaderboard.wxml
@@ -33,20 +33,22 @@
     </view>
   </block>
 </view> -->
-
+<loading hidden="{{loadingHidden}}">
+        加载中...
+</loading>
 <view class='table-module'>
 	<!-- 左侧固定 -->
 	<view class='left-policy-type'>
 		<view class='empty-box'>综合排名</view>
-		<view wx:for="{{rankData}}" class='left-col-list' wx:key="{{index}}">
+		<view wx:for="{{rankData}}" class='left-col-list' wx:key="index">
 			<view style="font-size:28rpx;  color: rebeccapurple;font-weight:bolder">{{item.integrated}}</view>
 		</view>
 	</view>
 	<!-- 右侧表格滚动 -->
 	<scroll-view class="scroll-box" scroll-x="true">
-		<view class="scroll-view-item" wx:for="{{titleList}}" wx:for-item="titleItem" wx:for-index="bigindex" wx:key="{{index}}">
+		<view class="scroll-view-item" wx:for="{{titleList}}" wx:for-item="titleItem" wx:for-index="bigindex" wx:key="index">
 			<view class='company-name'>{{titleItem.title}}</view>
-			<view wx:for="{{titleItem.data}}" wx:for-item="cell" wx:for-index="subindex" class='price-box' wx:key="{{index2}}">
+			<view wx:for="{{titleItem.data}}" wx:for-item="cell" wx:for-index="subindex" class='price-box' wx:key="index">
 				<view class="price" bindtap='showview' bindtap="test" data-title="{{titleItem.columnName}}" data-index="{{subindex}}">{{cell}}</view>
 				<!-- <view class="price" style="color:#FF6347" wx:elif="{{cell.price == '缺货'}}">缺货</view> -->
 			</view>
