--- a/pages/project/project.wxss
+++ b/pages/project/project.wxss
@@ -11,7 +11,7 @@
 }
 
 .search1 {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
@@ -94,12 +94,24 @@
   border: 0px solid darkgray;
 }
 .tr {
-  border: 1px solid gray;
   display: flex;
   width: 100%;
   justify-content: center;
   height: 3rem;
   align-items: center;
+
+  /* 也可以不定高度auto,不过对动画效果有影响 */
+  transition: all .5s ease;
+  opacity:1
+}
+.showBorder{
+  border: 1px solid gray;
+}
+.hide {
+  height: 0;
+  opacity:0;
+  position: relative;
+  z-index: 10;
 }
 .td {
   border: 1px solid gray;
@@ -110,7 +122,10 @@
   align-items: center;
 }
 .bg-w{
+  border: 1px solid gray;
   background: snow;
+  position: relative;
+  z-index: 100;
 }
 .bg-g{
   background: #f0f0f0;
@@ -125,7 +140,10 @@
   align-items: center;
 }
 
-
+.wsui-btn__hover_list {
+  opacity: 0.5;
+  background: #f7f7f7;
+}
 
 #projectImage {
   width: 100%;
