--- a/pages/tableData/datapages/zjjk/zjjk.wxml
+++ b/pages/tableData/datapages/zjjk/zjjk.wxml
@@ -1,2 +1,2 @@
-<!-- <web-view src="{{wvUrl}}"></web-view> -->
-<view>完善中。。。</view>
+<web-view src="{{wvUrl}}"></web-view>
+<!-- <view>完善中。。。</view> -->
