--- a/pages/project/projectInfo/projectInfo.wxss
+++ b/pages/project/projectInfo/projectInfo.wxss
@@ -1,1 +1,68 @@
 /* pages/project/projectInfo/projectInfo.wxss */
+.table {
+  border: 0px solid darkgray;
+}
+.tr {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  height: 3rem;
+  align-items: center;
+
+  /* 也可以不定高度auto,不过对动画效果有影响 */
+  transition: all .5s ease;
+  opacity:1
+}
+.showBorder{
+  border: 1px solid gray;
+}
+.hide {
+  height: 0;
+  opacity:0;
+  position: relative;
+  z-index: 10;
+}
+.td {
+  border: 1px solid gray;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  height: 3rem;
+  align-items: center;
+}
+.bg-w{
+  border: 1px solid gray;
+  background: snow;
+  position: relative;
+  z-index: 100;
+}
+.bg-g{
+  background: #f0f0f0;
+}
+.th {
+  width: 100%;
+  justify-content: center;
+  background: #cccccc;
+  /* color: #fff; */
+  display: flex;
+  height: 3rem;
+  align-items: center;
+}
+
+.wsui-btn__hover_list {
+  opacity: 0.5;
+  background: #f7f7f7;
+}
+
+#projectImage {
+  width: 100%;
+  text-align: center;
+  height: 490rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.projectBack {
+  background-color: #0089dd;
+}
