--- a/pages/control/tjtptx/gylh/yqgc/yqgc.wxml
+++ b/pages/control/tjtptx/gylh/yqgc/yqgc.wxml
@@ -1,25 +1,52 @@
-<view>
-	<view class="line">
-		<picker mode="multiSelector" name="finalTime" value="{{dateTimeArray[0][dateTime[0]]}}-{{dateTimeArray[1][dateTime[1]]}}-{{dateTimeArray[2][dateTime[2]]}} {{dateTimeArray[3][dateTime[3]]}}:{{dateTimeArray[4][dateTime[4]]}}:{{dateTimeArray[5][dateTime[5]]}}" bindchange="changeDateTime" bindcolumnchange="changeDateTimeColumn" range="{{dateTimeArray}}">
-			<view class="domes_title">
-				园区工程前期时间 : {{dateTimeArray[0][dateTime[0]]}}-{{dateTimeArray[1][dateTime[1]]}}-{{dateTimeArray[2][dateTime[2]]}} {{dateTimeArray[3][dateTime[3]]}}:{{dateTimeArray[4][dateTime[4]]}}:{{dateTimeArray[5][dateTime[5]]}}
-			</view>
-		</picker>
-		<view class='domes_title'>园区工程前期图片</view>
-		<view class='ui_cell'>
-			<view class='ui_cell_bd'>图片上传</view>
-			<view class='ui_cell_ft'>{{hasPicture}}/9</view>
-		</view>
-		<view class='ui_uploader_cell'>
-			<view class='ui_uploader_item' wx:for="{{files}}" wx:key="{{index}}">
-				<icon class='ui_uploader_item_icon' bindtap='clearImg1' data-index="{{index}}" type="clear" size="20" color="red" />
-				<image bindtap='previewImage1' data-index="{{index}}" src='{{item}}'></image>
-			</view>
-			<view class='ui_uploader' bindtap='chooseImage1' wx:if="{{ files.length < 10 }}"></view>
+<!--pages/tableData/datapages/tzwj/tzwj.wxml-->
+<view class="page" data-weui-theme="{{theme}}">
+	<view class="weui-form-preview__hd">
+		<view class="weui-form-preview__item">
+			<label class="weui-form-preview__label" bindtap="toDetailsAndDxzx" >
+				<view class="application-name"><image src="/images/dxzx.png"/>上传地形造型图片以及时间</view>
+			</label>
 		</view>
 	</view>
-<view class="divLine">
+  <view class="weui-form-preview__hd">
+		<view class="weui-form-preview__item">
+			<label class="weui-form-preview__label" bindtap="toDetailsAndJps">
+				<view class="application-name" ><image src="/images/jps.png"/>上传给排水工程图片以及时间</view>
+			</label>
+		</view>
+	</view>
+  <view class="weui-form-preview__hd">
+		<view class="weui-form-preview__item">
+			<label class="weui-form-preview__label" bindtap="toDetailsAndLhzz">
+				<view class="application-name"><image src="/images/lhzz.png"/>上传绿化种植图片以及时间</view>
+			</label>
+		</view>
+	</view>
+  <view class="weui-form-preview__hd">
+		<view class="weui-form-preview__item">
+			<label class="weui-form-preview__label" bindtap="toDetailsAndJgxp">
+				<view class="application-name"><image src="/images/jgxp.png"/>上传景观小品图片以及时间</view>
+			</label>
+		</view>
+	</view>
+	<view class="weui-form-preview__hd">
+		<view class="weui-form-preview__item">
+			<label class="weui-form-preview__label" bindtap="toDetailsAndLdzm">
+				<view class="application-name" ><image src="/images/ldzm.png"/>上传路灯照明图片以及时间</view>
+			</label>
+		</view>
+	</view>
+  <view class="weui-form-preview__hd">
+		<view class="weui-form-preview__item">
+			<label class="weui-form-preview__label" bindtap="toDetailsAndJkzn">
+				<view class="application-name"><image src="/images/jkzn.png"/>上传监控智能图片以及时间</view>
+			</label>
+		</view>
+	</view>
+  <view class="weui-form-preview__hd">
+		<view class="weui-form-preview__item">
+			<label class="weui-form-preview__label" bindtap="toDetailsAndLxgc">
+				<view class="application-name"><image src="/images/lxgc.png"/>上传零星工程以及时间</view>
+			</label>
+		</view>
+	</view>
 </view>
-  <view class="fb-btn" bindtap="submit">提交</view>
-</view>
-
